Commit 32: Changed the deprecated code